# n8w8-rust

./: .devcontainer.json  .dockerignore  .gitignore  .gitlab-ci.yml  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG  CHANGELOG-0.2.1.md  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  Containerfile  Dockerfile  Dockerfile.dapper  LICENSE  LICENSE.spdx  LICENSE.spdx.json  README.adoc  README.md  build.rs  build.sh  cli.ol8.spec  cliff.toml  createLocalRepo.sh  createRelease.sh  createReleaseTag.sh  license-header.txt  n8w8d.ol8.spec  renovate.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config
.github/: dependabot.yaml
.github/workflows/: build.yaml  pr.yaml  rust-clippy.yml  scorecard.yml  sec-audit.yaml  test-license.yaml
agent/: Cargo.toml  Create-Debian.adoc  Create-RPM.adoc  README.md
agent/src/: errors.rs  main.rs  proc_loadavg.rs  proc_meminfo.rs  proc_stat.rs  procstat.rs  zabbix_mode.rs
checks/: Cargo.toml
checks/src/: dns.rs  http.rs  http_tests.rs  lib.rs
cli/: Cargo.toml  README.adoc  README.asc
cli/src/: emojis.rs  http-check-bin.rs  k8s-check-bin.rs  k8s.rs  main.rs  simple-val-bin.rs  zabbix_mode.rs
cli/src/k8s_stuff/: mod.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs  longhorn.rs  proc_loadavg.rs  proc_meminfo.rs  proc_stat.rs
core/tests/: integration_test.rs
docs/: building.adoc  container.adoc  developers.adoc  docker.adoc  env.adoc  env.buildimage.adoc  env.dapper.adoc  env.devcontainer.adoc  gpg.adoc  license.adoc  packaging.adoc  releasing.adoc  rhel8.adoc  rpm-repository.adoc  testing.adoc  usage.adoc  usage.agent.adoc  usage.clis.adoc  usage.metricsserver.adoc  usage.n8w8d.adoc
executor/: Cargo.toml  README.adoc
executor/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/static/: 404.html  welcome.html
models/: .gitignore  Cargo.toml  build.rs  longhorn.proto  n8w8.proto
models/src/: lib.rs
openmetrics-server/: Cargo.toml
openmetrics-server/src/: main.rs
orm/: Cargo.toml  README.adoc  db.Containerfile  liquibase.endstage.flow  liquibase.flowfile.yaml  liquibase.flowvariables.yaml  liquibase.properties  prepare-liquibase.sh
orm/schema/: 001.yaml  drop-schema.sql  masterdata.dml.sql  schema.sql
orm/src/: lib.rs
orm/src/entities/: account.rs  mod.rs  prelude.rs  roles.rs  roles_to_accounts.rs  state.rs
os-packaging/linux/: README.adoc
os-packaging/linux/el8/: cli.ol8.spec  metrics-server.ol8.spec
os-packaging/linux/files/: metrics-server.service
os-packaging/linux/n8w8d/: debian.control
os-packaging/linux/nachtwacht-agent/: debian.control  project.el8.spec
os-packaging/linux/nachtwacht-clis/: debian.control  prepare.sh  project.el8.spec
os-packaging/linux/nachtwacht-metrics-server/: debian.control  project.el8.spec
repository/: README.md
repository/deb/: README.md
repository/rpm/: README.md  ds2-rpm.repo
schema/: n8w8.capnp  n8w8.proto  schema.capnp
src/: http-check-bin.rs  main.rs  schema_capnp.rs  tests.rs
src/checks/: http_check.rs  mod.rs
src/controllers/: mod.rs
src/models/: mod.rs  types.rs
