[package]
name = "nachtwacht-rust"
version = "0.1.0"
edition = "2021"
build= "build.rs"

[[bin]]
name="nachtwacht-rust"
path="src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = "0.5"
async-stream = "0.3"
env_logger = "0.9"
log = "0.4"
capnp = "0.14.6"
capnp-rpc = "0.14.1"
prost = "0.10"
protobuf = "2.27.1"

[build-dependencies]
capnpc = "0.14.7"
capnp-futures = "0.14.1"
protoc-rust = "2.27.1"
