[package]
name = "n8w8d"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description = "A host service to retrieve local health data and send it to N8w8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nachtwacht-models = { path = "../models" }
nachtwacht-core = { path = "../core" }
log = "0.4.20"
clap = { version = "4.4.11", features = ["derive"] }
http_req = "0.10.2"
env_logger = "0.10.1"
daemonize = "0.5.0"
chrono = "0.4.31"
sysinfo = "0.29.11"
thiserror = "1.0.51"
futures = "0.3.29"

[dev-dependencies]
env_logger = "0.10.1"
test-log = "0.2.14"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/n8w8d", dest = "/usr/local/bin/n8w8d", mode = "755" },
]

[package.metadata.generate-rpm.requires]
alternative = "*"
filesystem = ">= 3"

[package.metadata.deb]
maintainer = "DS/2 <info@ds-2.de>"
copyright = "2022, Dirk Strauss <info@ds-2.de>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/n8w8d", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/n8w8d/README", "644"],
]
