[package]
name = "nachtwacht-checks"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description = "This package contains the implementations for all tests."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.34"
reqwest = { version = "0.11.23", features = ["blocking"] }
url = "2.5.0"
nachtwacht-models = { path = "../models" }
log = "0.4.20"
base64 = "0.21.7"

[dev-dependencies]
pretty_assertions = "1.4.0"
