[package]
name = "nachtwacht-checks"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description = "This package contains the implementations for all tests."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.34"
reqwest = { version = "0.12.2", features = ["blocking"] }
url = "2.5.0"
nachtwacht-models = { path = "../models" }
tracing = "0.1.40"
base64 = "0.22.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
