[package]
name = "nachtwacht-cli"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description = "This package contains all the client binaries to run some tests alone without the server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nachtwacht-checks = { path = "../checks" }
nachtwacht-models = { path = "../models" }
nachtwacht-core = { path = "../core" }
log = "0.4.20"
clap = { version = "4.4.10", features = ["derive"] }
http_req = "0.10.1"
env_logger = "0.10.1"
futures = "0.3.29"

[[bin]]
name="n8w8-http-check"
path= "src/http-check-bin.rs"

[[bin]]
name="n8w8-simple-val"
path= "src/simple-val-bin.rs"
