[package]
name = "nachtwacht-core"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description = "This package contains the core methods. Kind of Business logics."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nachtwacht-checks = { path = "../checks" }
nachtwacht-models = { path = "../models" }
log = "0.4.20"
env_logger = "0.11.2"
thiserror = "1.0.57"
clap={version="4.4.18", features=["derive"]}
futures = "0.3.30"

[dev-dependencies]
test-log = "0.2.14"
