[package]
name = "nachtwacht-core"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description = "This package contains the core methods. Kind of Business logics."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nachtwacht-checks = { path = "../checks" }
nachtwacht-models = { path = "../models" }
thiserror = "1.0.57"
clap={version="4.5.1", features=["derive"]}
futures = "0.3.30"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
