[package]
name = "executor"
version = "0.2.0"
edition = "2021"
license = "GPLv3"
description="An executor to execute given tests at specific times."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nachtwacht-checks = { path = "../checks" }
nachtwacht-models = { path = "../models" }
log = "0.4.21"
clap = { version = "4.4.18", features = ["derive"] }
http_req = "0.10.2"
env_logger = "0.11.2"

[[bin]]
name="nachtwacht-executor"
path= "src/main.rs"
