[package]
name = "executor"
version = "0.2.1-rc.1"
edition = "2021"
license = "GPLv3"
description="An executor to execute given tests at specific times."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nachtwacht-checks = { path = "../checks" }
nachtwacht-models = { path = "../models" }
clap = { version = "4.5.1", features = ["derive"] }
http_req = "0.10.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

[[bin]]
name="nachtwacht-executor"
path= "src/main.rs"
