[package]
name = "nachtwacht-frontend"
version = "0.2.0"
edition = "2021"
license = "AGPLv3"
description = "This is the frontend webapp server to configure and inspect N8w8."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-session = {version="0.7.2", features=["cookie-session"]}
log = "0.4.20"
env_logger = "0.10.0"
async-stream = "0.3.5"
prost = "0.11.9"
protobuf = "3.2.0"
