[package]
name = "nachtwacht-frontend"
version = "0.2.0"
edition = "2021"
license = "AGPLv3"
description = "This is the frontend webapp server to configure and inspect N8w8."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6.5"
actix-session = {version="0.9.0", features=["cookie-session"]}
log = "0.4.20"
env_logger = "0.10.1"
async-stream = "0.3.5"
prost = "0.12.3"
protobuf = "3.3.0"
