[package]
name = "nachtwacht-frontend"
version = "0.2.0"
edition = "2021"
license = "AGPLv3"
description = "This is the frontend webapp server to configure and inspect N8w8."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-session = {version="0.9.0", features=["cookie-session"]}
async-stream = "0.3.5"
prost = "0.12.6"
protobuf = "3.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
