[package]
name = "nachtwacht-models"
version = "0.1.0"
edition = "2021"
build= "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.1.0"

[build-dependencies]
protobuf-codegen = "3.1.0"
protoc-bin-vendored = "3.0.0"
