[package]
name = "nachtwacht-models"
version = "0.1.1-alpha.6"
edition = "2021"
build= "build.rs"
license = "GPLv3"
description = "This package contains all the models and APIs to deal with n8w8."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.1.0"

[build-dependencies]
protobuf-codegen = "3.1.0"
protoc-bin-vendored = "3.0.0"
