[package]
name = "n8w8-openmetrics-server"
version = "0.2.0"
edition = "2021"
license = "AGPLv3"
description = "The metrics-server is only to provide some health data metrics to calling entities."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nachtwacht-core = { path = "../core" }
actix-web = "4.4.0"
#actix-files = "0.6.2"
log = "0.4.20"
env_logger = "0.10.1"
async-stream = "0.3.5"
clap = { version = "4.4.10", features = ["derive"] }
prometheus = "0.13.3"
lazy_static = "1.4.0"
opentelemetry_api = "0.20.0"
#opentelemetry-otlp = { version = "0.11.0", features = ["default"] }
#opentelemetry = { version = "0.18.0", features = ["rt-async-std"] }
prost = "0.12.3"
#protobuf = "3.2.0"
