[package]
name = "nachtwacht-orm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
nachtwacht-models = { path = "../models" }
log = "0.4.19"
serde = "1.0.171"
futures = "0.3.28"
