[package]
name = "nachtwacht-orm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.4", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
nachtwacht-models = { path = "../models" }
log = "0.4.20"
serde = "1.0.189"
futures = "0.3.29"
