[package]
name = "nachtwacht-orm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.14", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
nachtwacht-models = { path = "../models" }
serde = "1.0.200"
futures = "0.3.30"
tracing = "0.1.40"
